--- a/css/style.scss
+++ b/css/style.scss
@@ -95,6 +95,11 @@ a {
 .flex {
     display: flex;
 }
+
+.z-index1 {
+    z-index: 2;
+}
+
 .btn-booking {
     width: 15.3125rem;
     height: 2.8125rem;
@@ -278,7 +283,15 @@ a {
     }
 }
 .book-now {
-    padding: 0.625rem 1.625rem;
+    padding: 0.6rem 1.5rem;
+    width: 7rem;
+    font-family: Nunito;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 16px;
+    text-align: left;
+    border-radius: 4px;
 }
 
 .stars {
@@ -468,7 +481,7 @@ a {
             letter-spacing: 0em;
             text-align: center;
 
-            margin:2.5rem 0rem 4rem 0rem;
+            margin: 2.5rem 0rem 4rem 0rem;
         }
 
         .other-packages {
@@ -545,16 +558,16 @@ a {
                         }
 
                         & ul li {
-                                font-family: Mulish;
-                                font-size: 12px;
-                                font-style: normal;
-                                font-weight: 400;
-                                line-height: 15px;
-                                letter-spacing: 0em;
-                                text-align: left;
-                                padding-top: 0.6rem;
-                            }
-                        
+                            font-family: Mulish;
+                            font-size: 12px;
+                            font-style: normal;
+                            font-weight: 400;
+                            line-height: 15px;
+                            letter-spacing: 0em;
+                            text-align: left;
+                            padding-top: 0.6rem;
+                        }
+
                         & > p {
                             margin-top: 1.625rem;
                         }
@@ -573,3 +586,128 @@ a {
         }
     }
 } /* hotel info end */
+
+#bottom {
+    .newsletter {
+        width: 100%;
+        height: 16rem;
+        padding: 6rem;
+        position: relative;
+
+        &::before {
+            content: '';
+            background: url(/img/view.jpg) no-repeat center center/cover;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0.4;
+        }
+        & > div {
+            width: 50rem;
+            height: 6rem;
+            margin: auto;
+            position: relative;
+            z-index: 2;
+            padding-left: 5rem;
+
+            .search-bar {
+                margin-left: 10rem;
+                input[type='text'] {
+                    padding-left: 1rem;
+                    height: 3.4rem;
+                    width: 15rem;
+                }
+
+                input {
+                    border-radius: 0.6px;
+                }
+
+                button {
+                    color: #ffffff;
+                }
+            }
+
+            .btn-search {
+                width: 4rem;
+                height: 3.4rem;
+                border-radius: 0px 6px 6px 0px;
+                margin-left: -5px;
+                margin-top: -2px;
+                border: 3px solid var(--secondary-color);
+            }
+
+            .subs {
+                font-size: 24px;
+                font-style: normal;
+                font-weight: 300;
+                line-height: 30px;
+                text-align: left;
+            }
+
+            .news-title {
+                font-size: 36px;
+                font-style: normal;
+                font-weight: 600;
+                line-height: 45px;
+                text-align: left;
+            }
+        }
+    }
+    #other-activities {
+        padding: 3.75rem 0rem 6.125rem 0rem;
+        .other-title {
+            font-size: 24px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 30px;
+            text-align: left;
+            margin-bottom: 3.5rem;
+        }
+        .other-activities {
+            width: 16rem;
+            height: 16rem;
+            padding-top: 8rem;
+            padding-left: 1.625rem;
+            color: #ffffff;
+            border-radius: 6px;
+            background: url(/img/hiking.jpg) no-repeat center center/cover;
+
+            .p-content {
+                width: 9rem;
+                margin-bottom: 1rem;
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 20px;
+                text-align: left;
+            }
+        }
+        .other-activities-2 {
+            width: 16rem;
+            height: 16rem;
+            padding-top: 8rem;
+            padding-left: 1.625rem;
+            color: #ffffff;
+            border-radius: 6px;
+            background: url(/img/golf.jpg) no-repeat center center/cover;
+
+            .p-content {
+                width: 9rem;
+                margin-bottom: 1rem;
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 20px;
+                text-align: left;
+            }
+        }
+
+        .activities-grid{
+            display: grid;
+            grid-template-columns: repeat(4,1fr);
+            grid-gap:1.8rem;
+        }
+    }
+}
