--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 
 html,
 body {
+  overflow-x: hidden;
   background: var(--bg-color);
   max-width: 100%;
   margin: 0px auto;
@@ -52,6 +53,10 @@ ul {
 
 .float-clear {
   clear: both;
+}
+
+.my-1 {
+  margin: 0.75rem 0rem;
 }
 
 .py-1 {
@@ -116,6 +121,13 @@ a {
   z-index: 2;
 }
 
+.btn {
+  width: 10rem;
+  height: 3.125rem;
+  border: 3px solid var(--secondary-color);
+  border-radius: 0.25rem;
+}
+
 .btn-booking {
   width: 15.3125rem;
   height: 2.8125rem;
@@ -136,6 +148,10 @@ a {
   font-family: 'Luckiest Guy', sans-serif;
   font-size: 1.5rem;
   line-height: 1.5rem;
+}
+
+.logo span {
+  color: #ec1f46;
 }
 
 #navbar .navtop {
@@ -195,8 +211,8 @@ a {
   width: 100%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 2fr 2fr 1fr;
-      grid-template-columns: 2fr 2fr 1fr;
+  -ms-grid-columns: 2fr 3fr 1fr;
+      grid-template-columns: 2fr 3fr 1fr;
   -ms-flex-line-pack: center;
       align-content: center;
 }
@@ -687,13 +703,13 @@ a {
 
 #bottom .newsletter::before {
   content: '';
-  background: url(/img/view.jpg) no-repeat center center/cover;
+  background: url(/img/subs-background.jpg) no-repeat center center/cover;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.4;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 #bottom .newsletter > div {
@@ -713,10 +729,8 @@ a {
   padding-left: 1rem;
   height: 3.4rem;
   width: 15rem;
-}
-
-#bottom .newsletter > div .search-bar input {
-  border-radius: 0.6px;
+  color: #bdbdbd;
+  border-radius: 4px;
 }
 
 #bottom .newsletter > div .search-bar button {
@@ -738,6 +752,7 @@ a {
   font-weight: 300;
   line-height: 30px;
   text-align: left;
+  color: #ffffff;
 }
 
 #bottom .newsletter > div .news-title {
@@ -746,6 +761,7 @@ a {
   font-weight: 600;
   line-height: 45px;
   text-align: left;
+  color: #ffffff;
 }
 
 #bottom #other-activities {
@@ -807,5 +823,239 @@ a {
   -ms-grid-columns: (1fr)[4];
       grid-template-columns: repeat(4, 1fr);
   grid-gap: 1.8rem;
+}
+
+/* Footer */
+#footer {
+  background: #0a223d;
+  color: #ffffff;
+  padding: 6.25rem 10rem 3rem 10rem;
+}
+
+#footer .footer {
+  width: 100%;
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  justify-items: center;
+}
+
+#footer .footer .item1 {
+  font-family: Luckiest Guy;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 64px;
+  line-height: 64px;
+  padding-top: 2rem;
+}
+
+#footer .footer .item1 span {
+  color: #ec1f46;
+}
+
+#footer .footer .item2 {
+  width: 10rem;
+}
+
+#footer .footer .item2 h3 {
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  padding-bottom: 0.75rem;
+}
+
+#footer .footer .item2 ul li {
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17, 57px;
+  color: #e0e0e0;
+  padding-top: 0.5rem;
+}
+
+#footer .footer .item3 {
+  width: 15.625rem;
+}
+
+#footer .footer .item3 h3 {
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  padding-bottom: 0.75rem;
+}
+
+#footer .footer .item3 ul li {
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17, 57px;
+  color: #e0e0e0;
+  padding-top: 0.5rem;
+}
+
+#footer .footer .item3 i {
+  padding-left: 0.75rem;
+}
+
+#footer .footer .item4 {
+  width: 12.5rem;
+}
+
+#footer .footer .item4 h3 {
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  padding-bottom: 0.75rem;
+}
+
+#footer .footer .item4 ul li {
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17, 57px;
+  color: #e0e0e0;
+  padding-top: 0.5rem;
+}
+
+#footer .footer .item5 {
+  margin-top: 4rem;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / span 2;
+  width: auto;
+}
+
+#footer .footer .item5 h3 {
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  padding-bottom: 0.75rem;
+}
+
+#footer .footer .item5 i {
+  padding-right: 1rem;
+}
+
+#footer .footer .item5 ul li {
+  padding-top: 1.25rem;
+  color: #e0e0e0;
+  word-wrap: break-word;
+  font-family: Mulish;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+#footer .footer .item5 ul li p {
+  padding-left: 2rem;
+}
+
+#footer .footer .item6 {
+  margin-top: 4rem;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 5;
+  grid-column: 3 / span 5;
+  width: 35rem;
+  height: auto;
+}
+
+#footer .footer .item6 h3 {
+  width: 20rem;
+  font-family: ulish;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  padding-bottom: 0.75rem;
+}
+
+#footer .footer .item6 input[type='text'] {
+  width: 16rem;
+  height: 3.125rem;
+  color: #bdbdbd;
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  padding: 1.125rem 1.4rem;
+  border-radius: 4px;
+}
+
+#footer .footer .item6 input[name='phone'] {
+  margin-left: 1.875rem;
+}
+
+#footer .footer .item6 textarea {
+  padding: 1.125rem 1.4rem;
+  width: 34rem;
+  color: #bdbdbd;
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  border-radius: 4px;
+}
+
+#footer .footer .item6 button {
+  margin-top: 1.3rem;
+}
+
+#footer .footer .item6 .required {
+  text-align: right;
+  width: 100%;
+  color: #e0e0e0;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+#footer .footer .item7 {
+  margin-top: 5rem;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2 / 4;
+  text-align: left;
+  color: #ffffff;
+}
+
+#footer .footer .item7 ul li {
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  padding-left: 2rem;
+}
+
+#footer .footer .item8 {
+  margin-top: 5rem;
+  grid-column: 4 / span -1;
+  -ms-grid-column-align: end;
+      justify-self: end;
+  text-align: right;
+  margin-right: 2rem;
 }
 /*# sourceMappingURL=style.css.map */
