--- a/css/style.scss
+++ b/css/style.scss
@@ -49,6 +49,7 @@ ul {
 .float-clear {
     clear: both;
 }
+
 .my-1 {
     margin: 0.75rem 0rem;
 }
@@ -100,21 +101,24 @@ a {
 }
 
 .z-index1 {
-    z-index: 2;
+    z-index: 1;
 }
 .btn {
+    cursor: pointer;
     width: 10rem;
     height: 3.125rem;
     border: 3px solid var(--secondary-color);
     border-radius: 0.25rem;
 }
 .btn-booking {
+    cursor: pointer;
     width: 15.3125rem;
     height: 2.8125rem;
     border: 3px solid var(--secondary-color);
     border-radius: 0.25rem;
 }
 .btn-search {
+    cursor: pointer;
     width: 4rem;
     height: 2.5rem;
     border-radius: 0px 6px 6px 0px;
@@ -123,16 +127,22 @@ a {
     border: 3px solid var(--secondary-color);
 }
 .logo {
+    cursor: pointer;
     font-family: 'Luckiest Guy', sans-serif;
     font-size: 1.5rem;
     line-height: 1.5rem;
     span {
         color: #ec1f46;
     }
+    & a {
+        color: #333333;
+    }
 }
 
 #navbar {
+    width: 100%;
     .navtop {
+        width: 100%;
         color: var(--txt-color-dark);
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -156,6 +166,7 @@ a {
     }
 
     .navbar {
+        width: 100%;
         height: 7.5rem;
         .search-bar {
             input[type='text'] {
@@ -203,10 +214,13 @@ a {
         }
     }
     .navbottom {
+        width: 100%;
         height: 5rem;
         & div {
+            width: 100%;
             height: 100%;
             ul {
+                width: 100%;
                 height: 100%;
                 display: flex;
 
@@ -230,6 +244,9 @@ a {
                             font-style: normal;
                             font-weight: 600;
                             line-height: 18px;
+                        }
+                        &:hover {
+                            color: var(--secondary-color);
                         }
                     }
                 }
@@ -294,6 +311,7 @@ a {
     }
 }
 .book-now {
+    cursor: pointer;
     padding: 0.6rem 1.5rem;
     width: 7rem;
     font-family: Nunito;
@@ -311,6 +329,7 @@ a {
 }
 
 #home-content {
+    width: 100%;
     .hotel-name {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -344,6 +363,7 @@ a {
     }
 
     .home-content-a {
+        width: 100%;
         padding-top: 0.5rem;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -382,7 +402,9 @@ a {
 
 /* Hotel Info */
 #hotel-info {
+    width: 100%;
     .hotel-info-menu {
+        width: 100%;
         & ul {
             display: flex;
 
@@ -394,8 +416,12 @@ a {
                 color: var(--secondary-color);
                 &.current {
                     border-bottom: 4px #ec1f46 solid;
-                    & a {
+                    color: var(--secondary-color);
+                    a {
                         color: var(--secondary-color);
+                        &:hover {
+                            color: var(--secondary-color);
+                        }
                     }
                 }
                 &:first-child {
@@ -412,6 +438,10 @@ a {
                     line-height: 17.57px;
                     color: #333333;
                     font-weight: 700;
+
+                    &:hover {
+                        color: var(--secondary-color);
+                    }
                 }
             }
         }
@@ -427,11 +457,13 @@ a {
     }
     /* Info Content */
     .info-content {
+        width: 100%;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 2rem;
     }
     .package-card {
+        width: 100%;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 1rem;
@@ -440,20 +472,23 @@ a {
         padding: 1.5rem;
 
         li {
+            width: 100%;
             padding-bottom: 1.5rem;
-
-            p {
-                font-size: 12px;
-                font-weight: 400;
-                line-height: 15.06px;
-            }
+        }
+        p {
+            display: inline-block;
+            font-size: 12px;
+            font-weight: 400;
+            line-height: 15.06px;
+            margin-left: 1.2rem;
         }
         i {
-            margin-right: 1.3rem;
+            width: 16px;
         }
     }
 
     .package-card-3x {
+        width: 100%;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 6rem;
@@ -462,7 +497,8 @@ a {
         padding: 2.125rem 1.5rem;
         background-color: #ffffff;
 
-        & > div > p {
+        & > div p {
+            display: inline-block;
             font-size: 13px;
             font-weight: 600;
             line-height: 16.32px;
@@ -470,19 +506,22 @@ a {
         }
         li {
             padding-bottom: 1.5rem;
-
-            p {
-                font-size: 12px;
-                font-weight: 400;
-                line-height: 15.06px;
-            }
+        }
+        p {
+            font-size: 12px;
+            font-weight: 400;
+            line-height: 15.06px;
         }
         i {
             margin-right: 1.3rem;
         }
+        .package-title {
+            color: #ec1f46;
+        }
     }
 
     .guest-review {
+        width: 100%;
         h1 {
             font-family: Mulish;
             font-size: 36px;
@@ -496,12 +535,14 @@ a {
         }
 
         .other-packages {
+            width: 100%;
             display: grid;
             grid-template-columns: auto auto auto;
             grid-template-rows: 1fr 1fr;
             grid-gap: 1.875rem;
 
             .packages-type-1 {
+                width: 100%;
                 height: 31.25rem;
                 grid-column: 1 / span 2;
                 display: flex;
@@ -622,6 +663,7 @@ a {
             position: relative;
             z-index: 2;
             padding-left: 5rem;
+            display: flex;
 
             .search-bar {
                 margin-left: 10rem;
@@ -666,6 +708,7 @@ a {
         }
     }
     #other-activities {
+        width: 100%;
         padding: 3.75rem 0rem 6.125rem 0rem;
         .other-title {
             font-size: 24px;
@@ -723,6 +766,8 @@ a {
 }
 /* Footer */
 #footer {
+    width: 100%;
+    height: 100%;
     background: #0a223d;
     color: #ffffff;
     padding: 6.25rem 10rem 3rem 10rem;
@@ -731,10 +776,14 @@ a {
         width: 100%;
         height: 100%;
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-gap: 3rem;
         justify-items: center;
 
         .item1 {
+            width: 100%;
+            height: 100%;
+            text-align: center;
             font-family: Luckiest Guy;
             font-style: normal;
             font-weight: normal;
@@ -747,7 +796,8 @@ a {
         }
 
         .item2 {
-            width: 10rem;
+            width: 100%;
+            height: 100%;
             h3 {
                 font-family: Mulish;
                 font-style: normal;
@@ -764,11 +814,20 @@ a {
                 line-height: 17, 57px;
                 color: #e0e0e0;
                 padding-top: 0.5rem;
+
+                a {
+                    color: white;
+
+                    &:hover {
+                        color: #ec1f46;
+                    }
+                }
             }
         }
 
         .item3 {
-            width: 15.625rem;
+            width: 100%;
+            height: 100%;
             h3 {
                 font-family: Mulish;
                 font-style: normal;
@@ -785,6 +844,13 @@ a {
                 line-height: 17, 57px;
                 color: #e0e0e0;
                 padding-top: 0.5rem;
+                a {
+                    color: white;
+
+                    &:hover {
+                        color: #ec1f46;
+                    }
+                }
             }
 
             i {
@@ -793,7 +859,8 @@ a {
         }
 
         .item4 {
-            width: 12.5rem;
+            width: 100%;
+            height: 100%;
             h3 {
                 font-family: Mulish;
                 font-style: normal;
@@ -811,13 +878,20 @@ a {
                 line-height: 17, 57px;
                 color: #e0e0e0;
                 padding-top: 0.5rem;
+                a {
+                    color: white;
+
+                    &:hover {
+                        color: #ec1f46;
+                    }
+                }
             }
         }
 
-        .item5 {margin-top: 4rem;
-            grid-column: 1 / span 2;
-            width: auto;
-
+        .item5 {
+            width: 100%;
+            height: 100%;
+            grid-column: 1 / 3;
             h3 {
                 font-family: Mulish;
                 font-style: normal;
@@ -846,10 +920,10 @@ a {
             }
         }
 
-        .item6 {margin-top: 4rem;
-            grid-column: 3 / span 5;
-            width: 35rem;
-            height: auto;
+        .item6 {
+            width: 100%;
+            height: 100%;
+            grid-column: 3 / 5;
             h3 {
                 width: 20rem;
                 font-family: ulish;
@@ -859,53 +933,59 @@ a {
                 line-height: 23px;
                 padding-bottom: 0.75rem;
             }
-            input[type='text'] {
-                width: 16rem;
-                height: 3.125rem;
-                color: #bdbdbd;
-                font-family: Mulish;
-                font-style: normal;
-                font-weight: normal;
-                font-size: 12px;
-                line-height: 15px;
-                padding: 1.125rem 1.4rem;
-                border-radius: 4px;
-            }
-            input[name='phone'] {
-                margin-left: 1.875rem;
-            }
-            textarea {
-                padding: 1.125rem 1.4rem;
-                width: 34rem;
-                color: #bdbdbd;
-                font-family: Mulish;
-                font-style: normal;
-                font-weight: normal;
-                font-size: 12px;
-                line-height: 15px;
-                border-radius: 4px;
-            }
-            button {
-                margin-top: 1.3rem;
-            }
-            .required {
-                text-align: right;
-                width: 100%;
-                color: #e0e0e0;
-                align-self: center;
-                font-family: Mulish;
-                font-style: normal;
-                font-weight: bold;
-                font-size: 12px;
-                line-height: 15px;
+            form {
+                & > div{
+                    display: flex;
+                }
+                input[type='text'] {
+                    width: 50%;
+                    height: 3.125rem;
+                    color: #bdbdbd;
+                    font-family: Mulish;
+                    font-style: normal;
+                    font-weight: normal;
+                    font-size: 12px;
+                    line-height: 15px;
+                    padding: 1.125rem 1.4rem;
+                    border-radius: 4px;
+                }
+                input[name='phone'] {
+                    width: 50%;
+                    margin-left: 1.875rem;
+                }
+                textarea {
+                    padding: 1.125rem 1.4rem;
+                    width: 100%;
+                    color: #bdbdbd;
+                    font-family: Mulish;
+                    font-style: normal;
+                    font-weight: normal;
+                    font-size: 12px;
+                    line-height: 15px;
+                    border-radius: 4px;
+                }
+                button {
+                    margin-top: 1.3rem;
+                }
+                .required {
+                    text-align: right;
+                    width: 100%;
+                    color: #e0e0e0;
+                    align-self: center;
+                    font-family: Mulish;
+                    font-style: normal;
+                    font-weight: bold;
+                    font-size: 12px;
+                    line-height: 15px;
+                }
             }
         }
 
         .item7 {
-            margin-top: 5rem;
+            width: 100%;
+            height: 100%;
             grid-column: 2 / 4;
-            text-align: left;
-            color: #ffffff;
+            text-align: center;
             ul li {
                 font-family: Mulish;
                 font-style: normal;
@@ -913,16 +993,26 @@ a {
                 font-size: 12px;
                 line-height: 15px;
                 padding-left: 2rem;
+                a {
+                    color: white;
+
+                    &:hover {
+                        color: #ec1f46;
+                    }
+                }
+            }
+            li {
+                width: 30%;
+                height: 100%;
             }
         }
 
         .item8 {
-            margin-top: 5rem;
-            grid-column: 4 / span -1;
-            justify-self: end;
-
+            width: 100%;
+            height: 100%;
+            grid-column: 4 / 5;
             text-align: right;
-            margin-right: 2rem;
         }
     }
 }
+@import 'media';
